<resources>
    <string name="app_name">Recipe Passport</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already have an Account?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="age">Age</string>
    <string name="last_name">Last name</string>
    <string name="first_name">First Name</string>
    <string name="in_splash_fragment">in Splash fragment</string>
    <string name="categories">Categories</string>
    <string name="textview">TextView</string>
    <string name="welcome">Welcome</string>
    <string name="popular_meals">Popular Meals</string>
    <string name="this_app_offers_personalized_step_by_step_cooking_instructions_users_can_explore_a_vast_collection_of_recipes_save_their_favorites_and_watch_detailed_cooking_demonstration_videos">This app offers personalized, step-by-step cooking instructions. Users can explore a vast collection of recipes, save their favorites, and watch detailed cooking demonstration videos.</string>
    <string name="full_name">Full Name</string>
    <string name="contributor_name">Contributor Name</string>
    <string name="email_example_example_com">Email: example@example.com</string>
    <string name="recipe_passport">Recipe Passport</string>
    <string name="meal_is_a_masterpiece">meal is a masterpiece.</string>
    <string name="no_results_found">No results found</string>
    <string name="textview_signature">TextView signature</string>
    <string name="welcome_to_recipe_passport_where_you_nvirtually_travel_the_world_through_recipes">Welcome to recipe passport where you \nvirtually travel the world through recipes.</string>
    <string name="get_started">Get Started</string>
    <string name="area_name">area name</string>
    <string name="category_name">category name</string>
    <string name="name">name</string>
    <string name="category">category</string>
    <string name="from">From:</string>
    <string name="delete_from_favorites">Delete from favorites</string>
    <string name="about_us">About Us</string>
    <string name="about_the_app">About the app</string>
    <string name="sign_up_successful">Sign Up Successful</string>
    <string name="your_account_has_been_created">Your account has been created</string>
    <string name="continue_text">Continue</string>
    <string name="pick_for_you">Pick for you</string>
    <string name="this_italian_pasta_and_steak_will_warm_up_the_faintest_of_hearts">This Italian pasta and steak will warm up the faintest of hearts.</string>
    <string name="add_to_favorite">Add to favorites</string>
    <string name="welcome_back">Welcome Back!😊🤗🤗</string>
    <string name="don_t_have_account_with_us">Don’t have account with us?</string>
    <string name="recipe_title">Recipe Title</string>
    <string name="instructions">Instructions:</string>
    <string name="show_more">Show More</string>
    <string name="please_enter_your_account_details_below">Please enter your account details below!</string>
    <string name="already_have_account_with_us">Already have account with us?</string>
    <string name="click_to_see_more_details">Click to see more details</string>
    <string name="area">area</string>
    <string name="Name">Name</string>
    <string name="Category">Category</string>
    <string name="search">search</string>
</resources>