<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:foregroundGravity="center"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/cabin"
        android:text="@string/sign_up_successful"
        android:textAlignment="center"
        android:textColor="#001E00"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/dialog_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_regular"
        android:paddingTop="15dp"
        android:text="@string/your_account_has_been_created"
        android:textAlignment="center"
        android:textSize="16sp" />

    <Button
        android:id="@+id/continue_b"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/green"
        android:text="@string/continue_text" />

</LinearLayout>