<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <ImageView
        android:id="@+id/background_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/on_boarding_img"
        android:visibility="visible" />

    <!-- Text content -->

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_shadow"
        android:foregroundGravity="center"
        android:visibility="visible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="82dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp"
        android:visibility="visible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cabin"
            android:text="@string/recipe_passport"
            android:textColor="@android:color/white"
            android:textSize="40sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/welcome_to_recipe_passport_where_you_nvirtually_travel_the_world_through_recipes"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <Button
            android:id="@+id/continue_button"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/green"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/get_started"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

    </LinearLayout>
</RelativeLayout>